Update current video formatting for desktop breakpoint; fix spacing for nav avatar

--- a/src/components/CurrentVideo/CurrentVideo.scss
+++ b/src/components/CurrentVideo/CurrentVideo.scss
@@ -12,12 +12,20 @@
         justify-content: center;
     }
 
+    @include desktop {
+        height: 30rem;
+    }
+
     &__player {
         width: 100%;
         height: 100%;
 
         @include tablet {
             width: 90%;
+        }
+
+        @include desktop {
+            width: 80%;
         }
     }
 }
