--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -71,5 +71,9 @@
             width: 2.5rem;
             height: 2.5rem;
         }
+
+        @include desktop {
+            margin-left: 0.5rem;
+        }
     }
 }
